--- a/style.css
+++ b/style.css
@@ -44,12 +44,24 @@
     color: white;
 }
 
-.section-1 .header {
+.section-1 .heading {
     font-size: 48px;
+    font-weight: 900;
 }
 
-.section-1 .subtext {
+.subtext {
     font-size: 18px;
+}
+
+button {
+    border-radius: 8px;
+    background-color: #3882f6;
+    color: white;
+    padding: 8px 32px;
+    font-size: 18px;
+    font-weight: bold;
+    border: 0;
+    margin: 24px 0px;
 }
 
 .s1-right {
@@ -61,13 +73,36 @@
     align-items: center;
 }
 
-button {
-    border-radius: 8px;
-    background-color: #3882f6;
-    color: white;
-    padding: 12px 48px;
-    font-size: 18px;
-    font-weight: bold;
-    border: 0;
-    margin: 24px 0px;
+.section-2 {
+    background-color: white;
+    padding: 0px 128px;
+    text-align: center;
+}
+
+.section-2 .heading {
+    color: #1f2937;
+    font-size: 36px;
+    font-weight: 900;
+    padding: 64px;
+}
+
+.section-2 .container {
+    display: flex;
+    justify-content: center;
+    align-items: flex-start;
+    gap: 48px;
+}
+
+.section-2 .icon {
+    background-color: #ffffff;
+    height: 160px;
+    width: 160px;
+    border: 4px solid #3882f6;
+    border-radius: 16px;
+}
+
+.section-2 .subtext {
+    color: grey;
+    width: 160px;
+    margin: 8px 0px;
 }
