--- a/style.css
+++ b/style.css
@@ -39,7 +39,7 @@
     gap: 48px;
 }
 
-.s1-left {
+.section-1 .left {
     flex: 1;
     color: white;
 }
@@ -62,9 +62,10 @@ button {
     font-weight: bold;
     border: 0;
     margin: 24px 0px;
+    height: 40px;
 }
 
-.s1-right {
+.section-1 .right {
     flex: 1;
     background-color: gray;
     color: white;
@@ -125,4 +126,39 @@ button {
     font-size: 24px;
     font-weight: bold;
     text-align: right;
+}
+
+.section-4 {
+    background-color: white;
+    padding: 64px 256px;
+}
+
+.section-4 .call {
+    background-color: #3882f6;
+    border-radius: 16px;
+    padding: 32px 128px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.section-4 .left {
+    color: white;
+}
+
+.section-4 .heading {
+    font-size: 24px;
+}
+
+.section-4 button {
+    border: 2px solid white;
+}
+
+.footer {
+    background-color: #1f2937;
+    color: white;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 36px 256px;
 }
